--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,6 @@ production:
 
 staging:
   adapter: sqlite3
-  database: db/staging.sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
