--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
+  adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
@@ -19,14 +19,13 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql2
+  adapter: sqlite3
   database: db/production.sqlite3
   pool: 5
   timeout: 5000
 
 staging:
-  adapter: mysql2
+  adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
-  socket: /tmp/zoogle.sock
